<resources>
    <string name="app_name">MIS DATOS</string>
    <string name="HOLA">HOLA BUENAS NOCHES</string>
    <string name="NOMBRE">GIOVANNY FERNANDO MARTINEZ DIAZ</string>
    <string name="CARRERA">MI CARRERA: TECNOLOGIAS DE LA INFORMACION Y COMUNICACIONES</string>
    <string name="CONTROL">MI NUMERO DE CONTROL ES: 167010056</string>
    <string name="CORREO">MI CORREO ES : gio1998fer@gmail.com</string>
    <string name="GRUPO">MI GRUPO 7T11</string>
</resources>
